# MCRTX

./: .gitignore  AGENTS.md  README.md  conftest.py  note.toml  pyproject.toml
examples/: README.md  _plot.py  fit_line.py  line_force.py  line_list.py  mc_convergence.py  multi_param_fit.py  multiline.py  nlte_demo.py  nlte_wind.py  packet_launch.py  parameter_atlas.py  pcygni.py  source_functions.py  tabulated_wind.py  units_roundtrip.py  wind_structure.py
src/mcrtx/: __init__.py  _version.py  package_test.py  units.py  units_test.py
src/mcrtx/core/: __init__.py  estimators.py  estimators_test.py  packets.py  packets_test.py  rng.py  rng_test.py
src/mcrtx/dynamics/: __init__.py  force.py  force_test.py
src/mcrtx/media/: __init__.py  base.py  tabulated.py  tabulated_test.py  wind.py  wind_test.py
src/mcrtx/physics/: __init__.py  lines.py  lines_test.py  nlte.py  nlte_test.py  sobolev.py  sobolev_test.py  source.py  source_test.py
src/mcrtx/scenarios/: __init__.py  wind_line.py  wind_line_test.py
src/mcrtx/solvers/: __init__.py  mc.py  mc_test.py  multiline.py  multiline_test.py  reference.py  reference_test.py
